--- a/1.html
+++ b/1.html
@@ -41,11 +41,11 @@
   <footer>
     <div class='active'>
       <span class="iconfont icon-top250"></span>
-      <span>Top250</span>
+      <span>评分前250名</span>
     </div>
     <div>
       <span class="iconfont icon-us"></span>
-      <span>北美</span>
+      <span>北美排行榜</span>
     </div>
     <div>
       <span class="iconfont icon-search"></span>
